# Area

./: .env.example  .gitignore  .infisical.json  README.md  docker-compose.dev.yaml  docker-compose.yml  package.json  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: continuous-deployment.yml  documentation.yml  main.yml  on-release.yml  release-apk.yml  release-drafter.yml  sonarqube.yml
.github/workflows/config/: .markdownlint.jsonc
backend/: .eslintrc.js  .prettierrc.yaml  Dockerfile  package.json
backend/back/: .dockerignore  .env.example  .eslintrc.yaml  1699107944021-CreateAirtableDeleteRecordReaction.ts  Dockerfile  entrypoint.sh  package.json
backend/back/src/: app.module.ts  database.ts  main.ts  param-validators.dto.ts
backend/back/src/about/: about.controller.ts  about.module.ts  about.service.ts
backend/back/src/activity/: activity.controller.ts  activity.module.ts  activity.service.ts
backend/back/src/auth/: admin.guard.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  jwt.strategy.ts
backend/back/src/connections/: connections.controller.ts  connections.module.ts  connections.service.spec.ts  connections.service.ts  oauth.controller.ts  oauth.service.ts
backend/back/src/grpc/: area_worker.proto  grpc.controller.ts  grpc.dto.ts  grpc.module.ts  grpc.service.ts
backend/back/src/jobs/: back-jobs.service.ts  jobs.controller.ts  jobs.dto.ts  jobs.module.ts  jobs.service.ts
backend/back/src/migrations/: 1696697017387-Seeding.ts  1696791202100-WorkflowAreaJobId.ts  1696798385766-BasicWorkflowAreas.ts  1696815504752-AreaNeededServiceScopeCascadeDeleteAndUserConnectionTokenToData.ts  1696851864480-ServiceNeedConnection.ts  1697044261933-AreaParametersFlowAndDescription.ts  (+6 more)
backend/src/: main.ts
backend/src/services/: app.module.ts
backend/supervisor/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
backend/supervisor/grpc/: init.go  server.go
backend/supervisor/jobs/: images.go  jobs.go
backend/worker/: package.json
backend/worker/src/: app.module.ts  main.ts
backend/workers/airtable/: package.json
backend/workers/discord/: .dockerignore  .eslintrc.yaml  Dockerfile  package.json
backend/workers/github/: .dockerignore  .eslintrc.yaml  Dockerfile  README.md  package.json  tsconfig.json
backend/workers/gitlab/: .gitignore  Dockerfile  main.py  pyproject.toml
backend/workers/gitlab/src/webhooks/: setup.py
backend/workers/gmail/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/workers/gmail/src/: create_draft.py  send_email.py  update_signature.py
backend/workers/google/: .gitignore  main.py  pyproject.toml
backend/workers/google/src/calendar/: create_calendar.py
backend/workers/google/src/classrooms/: create_course.py
backend/workers/google/src/contacts/: create_contact.py
backend/workers/google/src/docs/: create_document.py
backend/workers/google/src/drive/: create_file.py  create_folder.py  create_shared_drive.py  duplicate_file.py  empty_trash.py
backend/workers/google/src/forms/: add_youtube_item.py  convert_form_to_quiz.py  create_form.py  update_form_description.py
backend/workers/google/src/gmail/: change_interface_language.py  create_draft.py  send_email.py  update_signature.py
backend/workers/google/src/slides/: create_presentation.py  create_slide.py
backend/workers/google/src/spreadsheets/: create_spreadsheet.py  update_spreadsheet_title.py
backend/workers/google/src/tasks/: create_task_list.py
backend/workers/google/src/utils/: auth.py
backend/workers/google/src/youtube/: create_comment.py  on_video.py
backend/workers/linear/: package.json
backend/workers/linkedin/: .dockerignore  .gitignore  main.py  pyproject.toml
backend/workers/linkedin/src/: create_post.py
backend/workers/linkedin/src/utils/: parsing.py
backend/workers/microsoft/: .prettierrc.yaml  package.json
backend/workers/miro/: main.py  pyproject.toml
backend/workers/miro/src/board/: create.py
backend/workers/riot/: Dockerfile  package.json
backend/workers/seconds-interval/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  common.cmake
backend/workers/seconds-interval/src/: Main.cpp  SecondsIntervalService.cpp  SecondsIntervalService.hpp
backend/workers/slack/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/workers/slack/src/message/: create_message.py
backend/workers/slack/src/utils/: parsing.py
backend/workers/todoist/: package.json
backend/workers/twitter/: package.json
backend/workers/youtube/: Dockerfile  main.py  pyproject.toml
docs/: CHANGELOG.md  CNAME  README.md  _sidebar.md  index.html  project.md
docs/architecture/: devops.md  supervisor.md  workers.md
docs/general/: getting-started.md  project.md
docs/internal/: create-workers.md  testing-backend-locally.md
frontend/mobile/: .metadata  Dockerfile  app.json  l10n.yaml  metro.config.ts  package.json  pubspec.yaml  tsconfig.json
frontend/mobile/lib/: colors.dart  login.dart  main.dart  register.dart  requests.dart
frontend/mobile/test/: widget_test.dart
frontend/web/: .eslintrc.yaml  .gitignore  Dockerfile  cypress.config.ts  next.config.js  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.json
frontend/web/app/: layout.tsx  not-found.tsx  page.tsx
frontend/web/components/: ApkDownloadButton.tsx  FontAwesomeIcon.tsx  Footer.tsx  Modal.tsx  Navbar.tsx  ThemeSelector.tsx
frontend/web/config/: environment.ts  i18n.ts  services.ts
frontend/web/cypress/: tsconfig.json
frontend/web/hooks/: useSystemTheme.tsx
frontend/web/locales/: en-US.ts  fr-FR.ts  is-IS.ts
frontend/web/services/: index.ts
frontend/web/stores/: editor.ts  index.ts  library.ts  user.ts
frontend/web/styles/: customCheckbox.css
frontend/web/types/: activity.ts  api.ts  editor.ts  services.ts  user.ts  workflows.ts
frontend/web/utils/: api.ts  arrays.ts  environment.ts  toast.ts  workflows.ts
nginx/: area.conf  sonarqube.conf
scripts/: copy_proto.sh  dump_env.sh
tools/: copy_proto.sh
(+380 files in other folders)
