[tool.poetry]
name = "gmail-area-worker"
version = "0.1.0"
description = "Worker for GMail AREA"
authors = ["Reza Rahemtola <reza.rahemtola@epitech.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.102.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
