[tool.poetry]
name = "miro-worker"
version = "1.0.0"
description = "Miro worker"
authors = []

[tool.poetry.dependencies]
elementpath = "^4.1.5"
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.59.0"
grpcio = "^1.59.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
