[tool.poetry]
name = "slack-worker"
version = "1.0.0"
description = "Slack worker"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
elementpath = "^4.1.5"
slack-sdk = "^3.23.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.59.0"
grpcio = "^1.59.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
